# ai_chip_sdk

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: api_reference.rst  conf.py  examples.rst  index.rst
docs/source/: api_reference.rst  conf.py  index.rst  introduction.rst
examples/: cortex_m4_example.c
include/: cortex_m4_header.h
src/: CMakeLists.txt  cortex_m4_code.c
tests/: test_cortex_m4.c
